5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1880_3184.log
== TEST (2019-07-03 14:04:26) 
-- CODE:
from numpy import*
s = array(eval(input("Digite: ")))
i=-1
b=0
while(i>= -len(s)):
	s = s+s[i]
	b = b-1
print(b)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:04:50) 
-- CODE:
from numpy import*
s = (input("Digite: "))
i=-1
b=0
while(i>= -len(s)):
	s = s+s[i]
	b = b-1
print(b)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:05:01) 
-- CODE:
from numpy import*
s = input("Digite: ")
i=-1
b=0
while(i>= -len(s)):
	s = s+s[i]
	b = b-1
print(b)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:05:25) 
-- CODE:
from numpy import*
s = input("Digite: ")
i=-1
b=0
while(i>= -len(s)):
	s = s+s[i]
	b = b-1
print(s)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:05:33) 
-- CODE:
from numpy import*
s = input("Digite: ")
i=-1
b=0
while(i>= -len(s)):
	s = s+s[i]
	b = b-1
print(s)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:06:09) 
-- CODE:
from numpy import*
s = array(eval(input("Digite:")))
i=-1
b=0
while(i >= -len(s)):
	s = s+s[i]
	b = b+1
print(b)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:02) 
-- CODE:
from numpy import*
s = array(eval(input("Digite:")))
i=-1
b=0
while(i >= -len(s)):
	s = s+s[i]
	b = b+1
print(b)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:11:29) 
-- CODE:
from numpy import*
s = array(eval(input("Digite:")))
i=-1
b=0
while(i >= -len(s)):
	s = s+s[i]
	b = b+1
print(b)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:13:21) 
-- CODE:
from numpy import*
s = array(eval(input("Digite:")))
i=-1
b=0
while(i >= -len(s)):
	s = s+s[i]
	b = b+1
print(b)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 14:13:24) 
-- CODE:
from numpy import*
s = array(eval(input("Digite:")))
i=-1
b=0
while(i >= -len(s)):
	s = s+s[i]
	b = b+1
print(b)
	

-- EXECUTION TIME:
0.836462
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1880/3184/main.py", line 6, in <module>
    s = s+s[i]
TypeError: ufunc 'add' did not contain a loop with signature matching types dtype('<U1') dtype('<U1') dtype('<U1')

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:16:26) 
-- CODE:
from numpy import*
s = array(eval(input("Digite:")))
i=-1
b=0
while(i >= -len(s)):
	s = s+s[i]
	b = b+1
print(b)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:19:14) 
-- CODE:
from numpy import*
s = array(eval(input("Digite:")))
i=-1
b=0
while(i >= -len(s)):
	s = s+s[i]
	b = b+1
print(b)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:41:46) 
-- CODE:
from numpy import*
s = array(eval(input("Digite:")))
for i in range(size(s)):
	
	

-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
